# anansai

./: .flake8  AGENTS.md  AGENTS.md~  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: epic.yml  spike.yml  story.yml
.github/workflows/: ci.yml
anansai/: __init__.py
test/: #test_smoke.py#  smoke_test.py  smoke_test.py~
