[project]
name = "anansai"
version = "0.1.0"
description = "Local-first CLI agent toolchain"
requires-python = ">=3.13"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
